--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,12 +175,12 @@ body {
 
 .spineCanvas {
   width: 65%;
-  height: 300%;
+  height: 100%;
 
   position: absolute;
   top: 100%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -15%); /* 50 -> 15 */
 }
 
 .auraBackCanvas {
@@ -194,138 +194,3 @@ body {
 .auraFrontCanvas {
   z-index: 1;
 }
-
-/* ------------------------------------------------------------------------ */
-/* Dragon Main Name Tag */
-
-.dragonNicknameContainer {
-  position: absolute;
-  left: 50%;
-  bottom: 22%;
-  transform: translate(-50%, 0%);
-}
-
-.textHoverImage {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.dragonNickname {
-  display: block;
-  color: #FFFFFF;
-  white-space: nowrap;
-}
-
-.dragonBreedName {
-  position: absolute;
-  bottom: 8%;
-  left: 50%;
-  transform: translate(-50%, 0%);
-
-  color: yellow;
-  white-space: nowrap;
-}
-
-/* ------------------------------------------------------------------------ */
-/* Dragon Get And View Info */
-
-.getAndViewContainer {
-  position: relative;
-  max-width: 598px;
-  width: 70%;
-  margin: auto;
-}
-
-.getAndViewImg {
-  width: 100%;
-  height: auto;
-}
-
-.getDateText {
-  position: absolute;
-  left: 0%;
-  top: 50%;
-  width: 30%;
-  transform: translate(50%, -50%);
-
-  text-align: center;
-  color: #C5D287;
-}
-
-.viewText {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 30%;
-  transform: translate(50%, -50%);
-
-  text-align: center;
-  color: #fff;
-}
-
-/* ------------------------------------------------------------------------ */
-/* Nick And Server */
-
-.nickAndServerContainer {
-  display: block;
-  margin: auto;
-}
-
-.nickText {
-  display: block;
-  text-align: center;
-  color: #fff;
-}
-
-.serverText {
-  display: block;
-  text-align: center;
-  color: #C5D287;
-}
-
-/* ------------------------------------------------------------------------ */
-/* Bottom store icon etc */
-
-.storeIcon {
-  max-width: 60%;
-  max-height: 400px;
-  height:auto;
-  display: block;
-}
-
-.stores {
-  margin-top: 5%;
-  padding-top: 1%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-
-  max-width: 500px;
-  max-height: 150px;
-  width: 60%;
-  height: auto;
-}
-
-.storeButton {
-  max-width : 45%;
-  max-height: 50px;
-  width: auto;
-  height: auto;
-}
-
-.storeGoogle {
-  float: left;
-}
-
-.storeApple {
-  float: right;
-}
-
-.storeButton img {
-  width: 100%;
-  height: auto;
-}
-
-/* ------------------------------------------------------------------------ */
